[package]
name = "obstack"
version = "0.1.0"
authors = ["Peter Todd <pete@petertodd.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/petertodd/rust-obstack/"
description = "A fast, stack-based allocator, usable for any object"
categories = ["memory-management"]

[lib]
name = "obstack"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.3.16"
bencher = "0.1.4"

[[bench]]
name = "bench"
harness = false
